Adiçao do tsyringe e update da documentacao
